5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1734_2495.log
== TEST (2019-05-07 19:32:56) 
-- CODE:
num = int(input("Digite um numero: "))
while (num > = 0):
	if (num / 2 = 0):
		mensagem = "PAR"
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	
	

-- ERROR:
File "XXXX", line 2
    while (num > = 0):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:33:07) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	
	

-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:34:19) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
   else:
		mensagem = "IMPAR"
	
print(mensagem)
	
	
	

-- ERROR:
File "XXXX", line 5
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:34:36) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- ERROR:
File "XXXX", line 5
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:34:44) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- ERROR:
File "XXXX", line 5
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:34:58) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- ERROR:
File "XXXX", line 5
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:35:04) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- ERROR:
File "XXXX", line 5
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:35:40) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		mensagem = "PAR"
		print(mensagem)
	else:
		mensagem = "IMPAR"
		print(mensagem)
	
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:37:11) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		print(num)
		mensagem = "PAR"
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:37:15) 
-- CODE:
num = int(input("Digite um numero: "))
while (num >= 0):
	if (num / 2 == 0):
		print(num)
		mensagem = "PAR"
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:38:23) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		mensagem = "PAR"
		print(mensagem)
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:38:28) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		mensagem = "PAR"
		print(mensagem)
		num = int(input("Digite um numero: "))
	else:
		mensagem = "IMPAR"
print(mensagem)
	
	
	

-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:38:53) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
		print(mensagem)
	else:
		mensagem = "IMPAR"
		print(mensagem)
	
	
	

-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:39:19) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
		print(mensagem)
	else:
		mensagem = "IMPAR"
		print(mensagem)
	
	
	

-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:39:44) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
		print(mensagem)
else:
	mensagem = "IMPAR"
	print(mensagem)
	
	
	

-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:39:48) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		num = int(input("Digite um numero: "))
		mensagem = "PAR"
		print(mensagem)
else:
	mensagem = "IMPAR"
	print(mensagem)
	
	
	

-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:40:02) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		mensagem = "PAR"
		print(mensagem)
else:
	mensagem = "IMPAR"
	print(mensagem)
	
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:40:05) 
-- CODE:
num = int(input("Digite um numero: "))
while (num != -1):
	if (num / 2 == 0):
		mensagem = "PAR"
		print(mensagem)
else:
	mensagem = "IMPAR"
	print(mensagem)
	
	
	

-- OUTPUT:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:44:20) 
-- CODE:
n = int(input("digite o numero: "))
cont = 0
while (n != -1):
	if n % 2 == 0:
		print("PAR")
		n = int(input("digite o numero: "))
	else: 
		print("IMPAR")
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:44:52) 
-- CODE:
n = int(input("digite o numero: "))
cont = 0
while (n != -1):
	if n % 2 == 0:
		print("PAR")
		n = int(input("digite o numero: "))
	else: 
		print("IMPAR")
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:44:58) 
-- CODE:
n = int(input("digite o numero: "))
cont = 0
while (n != -1):
	if n % 2 == 0:
		print("PAR")
		n = int(input("digite o numero: "))
	else: 
		print("IMPAR")
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:45:11) 
-- CODE:
n = int(input("digite o numero: "))
cont = 0
while (n != -1):
	if n % 2 == 0:
		print("PAR")
		n = int(input("digite o numero: "))
	else: 
		print("IMPAR")
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:47:20) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
		n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
print(mensagem)
-- OUTPUT:
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:47:44) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
		n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
   print(mensagem)
-- ERROR:
File "XXXX", line 8
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:47:51) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
		n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
		print(mensagem)
-- ERROR:
File "XXXX", line 8
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:48:17) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
		n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
		print(mensagem)
-- ERROR:
File "XXXX", line 8
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:48:29) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
		n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
		print(mensagem)
-- ERROR:
File "XXXX", line 8
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:48:32) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
		n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
		print(mensagem)
-- ERROR:
File "XXXX", line 8
    print(mensagem)
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:49:03) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
n = int(input("digite o numero: "))
	else: 
		mensagem = "IMPAR"
		print(mensagem)
-- ERROR:
File "XXXX", line 6
    else: 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:50:04) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
	else: 
		mensagem = "IMPAR"
	print(mensagem)
	n = int(input("digite o numero: "))
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:50:26) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
	else: 
		mensagem = "IMPAR"
	
	n = int(input("digite o numero: "))
	print(mensagem)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:50:31) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
	else: 
		mensagem = "IMPAR"
	
	n = int(input("digite o numero: "))
	print(mensagem)
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 19:50:38) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
	else: 
		mensagem = "IMPAR"
	print(mensagem)
	n = int(input("digite o numero: "))
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 19:50:43) 
-- CODE:
n = int(input("digite o numero: "))
while (n != -1):
	if n % 2 == 0:
		mensagem = "PAR"
	else: 
		mensagem = "IMPAR"
	print(mensagem)
	n = int(input("digite o numero: "))
	
-- EXECUTION TIME:
0.205779
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
